# learnQT

./: AudioInfo.cpp  AudioInfo.h  AudioInfoBox.qml  CMakeLists.txt  ImageButton.qml  Main.qml  PlayerController.cpp  PlayerController.h  PlaylistPanel.qml  README.md  TextButton.qml  main.cpp
